# FastAPI_Tutorial

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 67b97ba9faed_initial_migration.py  bf622b826af7_initial_migration.py
app/: database_mongo.py  main.py  redis_rate_limiter.py
app/crud/: crud_redis_api.py  crud_user_api.py  product.py
app/database/: database_postgres.py  database_redis.py  db_user_api.py
app/models/: m_user_api.py  todo.py
app/routes/: health.py  products.py  r_user_api.py  todo.py
app/schemas/: s_redis_api.py  s_user_api.py  todo.py
app/tests/: conftest.py
old_thing/app/crud/: product.py  todo.py
old_thing/app/models/: todo.py
old_thing/app/routes/: health.py  todo.py
old_thing/app/schemas/: product.py  s_user_api.py
old_thing/app/tests/: conftest.py  test_todo.py
